# ESP32-Wi-Fi-sniffer

./: ESP32_2.brd  ESP32_2.sch  README.md  zdroje.txt
ESP-IDF/: REDUCED_DATA.csv  sd_problem.txt
ESP-IDF/BAP/ESP32_Wi-Fi_SNIFFER/main/: CMakeLists.txt  battery.c  bq27441.h  button_manager.c  button_manager.h  config.h  display_queue.c  display_queue.h  i2c_oled.c  idf_component.yml  main.c  server.c  server.h  sniffer.c  sniffer.h  variables.h  wifi_connect.c
ESP-IDF/BAP/ESP32_Wi-Fi_SNIFFER/main/components/u8g2-hal-esp-idf/: CMakeLists.txt  LICENSE  README.md  component.mk
ESP-IDF/BAP/ESP32_Wi-Fi_SNIFFER/main/components/u8g2-hal-esp-idf/examples/: test_SSD1306.c  test_SSD1306_i2c.c
ESP-IDF/BAP/ESP32_Wi-Fi_SNIFFER/main/components/u8g2-hal-esp-idf/include/: u8g2_esp32_hal.h
ESP-IDF/BAP/ESP32_Wi-Fi_SNIFFER/main/components/u8g2-hal-esp-idf/src/: u8g2_esp32_hal.c
ESP-IDF/radiotap_csv_pcap_3/main/: CMakeLists.txt  button.c  button.h  button_manager.c  config.h  i2c_oled.c  pcap.c  server.c  sniffer.c  variables.h
ESP-IDF/test4/main/: CMakeLists.txt  button_manager.c  button_manager.h  config.h  i2c_oled.c  i2c_oled.h  main.c  sniffer.c  sniffer.h  wifi_connect.c
Micropython/: SD_card_test3.py  beacons.csv  wifi_sd4.py
Probe_Request_Analysis_App/: README.md  anonymize.py  create_table.py  devices.py  instances.py  main.py  plotting.py  process_files.py  reduced_match.py  relevant_data.py
Python/: Analýza.md  README.md  analyze_filtered_devices.py  analyze_macs.py  analyze_reduced_data.py  anonymize.py  combine_pcap.py  create_reduced_data.py  create_table.py  (+11 more)
(+69 files in other folders)
