idf_component_register(SRCS "battery.c"
                            "main.c"
                            "i2c_oled.c" 
                            "pcap.c"
                            "pcap_lib.c"
                            "sniffer.c"
                            "wifi_connect.c"
                            "button_manager.c"
                            "button.c"
                            "server.c"
                            "miniz.c"
                            "display_queue.c"
                            "bq27441.c"
                    INCLUDE_DIRS ".")
